--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,11 @@ html, body,#root,.App,.homepage {
   color: #61dafb;
 }
 
+#HomePageSkills {
+  display: inline-flex;
+  justify-content: space-around;
+  
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
