--- a/src/views/css/InventoryPage.css
+++ b/src/views/css/InventoryPage.css
@@ -6,7 +6,7 @@
     text-align: center;
     width:100%;
     min-height: 100%;
-    background-color:rgba(255, 255, 255, .2);
+    background-color:rgba(52,58,64, 0.7);
     border:1px solid rgba(255, 255, 255, .2);
     border-radius: 15px;
   }
@@ -18,4 +18,6 @@
 
   img{
     max-height: 8vh;
+    background-color:rgba(41, 45, 49, 0.4);
+    opacity: 0.9;
   }
